[package]
name = "formflight"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
legion = "0.4.0"
uuid = "0.8"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
plotters = "^0.3.1"

# mads = { path = "../mads" }
# rust-optimal-transport = { path = "../rust-optimal-transport" }
mads = { git = "https://github.com/kachark/mads", branch = "main" }
rust-optimal-transport = { git = "https://github.com/kachark/rust-optimal-transport", branch = "main" }
